--- a/trunk/simulations-java/simulations/glaciers/data/glaciers/localization/glaciers-strings_iw.properties
+++ b/trunk/simulations-java/simulations/glaciers/data/glaciers/localization/glaciers-strings_iw.properties
@@ -1,5 +1,5 @@
-#glaciers-strings_iw.properties created Tue Jul 20 01:20:52 IDT 2010 using: glaciers 2.03.00 (38002), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Tue Jul 20 01:20:52 IDT 2010
+#glaciers-strings_iw.properties created Mon Oct 17 14:49:17 MDT 2011 using: glaciers 2.03.00 (38002), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 14:49:17 MDT 2011
 axis.metersPerYear=\u05DE/\u05E9\u05E0\u05D4
 title.graphControls=\u05D2\u05E8\u05E4\u05D9\u05DD
 axis.glacierLength.english=(\u05D0\u05D5\u05E8\u05DA \u05E7\u05E8\u05D7\u05D5\u05DF (\u05E8\u05D2\u05DC
@@ -12,6 +12,7 @@ slider.snowfall=<html>\u05DE\u05E9\u05E7\u05E2\u05D9 \u05E9\u05DC\u05D2<br>\u05D
 axis.elevation.metric=(\u05D4\u05D2\u05D1\u05D4\u05D4 (\u05DE\u05D8\u05E8
 tooltip.glacialBudgetMeter=\u05EA\u05D6\u05D5\u05D6\u05EA \u05E7\u05E8\u05D7\u05D5\u05E0\u05D9\u05DD \u05DE\u05D8\u05E8
 title.glacialBudgetVersusElevation=\u05EA\u05D6\u05D5\u05D6\u05EA \u05E7\u05E8\u05D7\u05D5\u05E0\u05D9\u05DD \u05DB\u05E0\u05D2\u05D3 \u05D4\u05D2\u05D1\u05D4\u05D4
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 slider.clock.slow=\u05DC\u05D0\u05D8
 glaciers.name=\u05E7\u05E8\u05D7\u05D5\u05E0\u05D9\u05DD
 tooltip.gpsReceiver=GPS
