--- a/trunk/simulations-java/simulations/greenhouse/data/greenhouse/localization/greenhouse-strings_iw.properties
+++ b/trunk/simulations-java/simulations/greenhouse/data/greenhouse/localization/greenhouse-strings_iw.properties
@@ -1,5 +1,5 @@
-#greenhouse-strings_iw.properties created Wed Jul 21 22:07:40 IDT 2010 using: greenhouse 2.07.00 (38003), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Wed Jul 21 22:07:40 IDT 2010
+#greenhouse-strings_iw.properties created Mon Oct 17 14:50:12 MDT 2011 using: greenhouse 3.04.00 (56778), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 14:50:12 MDT 2011
 GreenhouseControlPanel.PPMAbreviation=\u05D7\u05DC\u05E7\u05D9\u05E7\u05D9\u05DD \u05DE\u05DE\u05DC\u05D9\u05D5\u05DF
 GreenhouseControlPanel.ThermometerCheckbox=\u05DE\u05D3\u05D7\u05D5\u05DD
 ClockPanel.SliderTitle=\u05DE\u05D4\u05D9\u05E8\u05D5\u05EA \u05D4\u05E4\u05D5\u05D8\u05D5\u05DF
@@ -20,6 +20,7 @@ GreenhouseControlPanel.NumberOfCloudsLabel=\u05DE\u05E1\u05E4\u05E8 \u05E2\u05E0
 GreenhouseControlPanel.PPBAbreviation=\u05D7\u05DC\u05E7\u05D9\u05E7\u05D9\u05DD \u05DE\u05DE\u05DC\u05D9\u05D0\u05E8\u05D3
 GreenhouseControlPanel.ViewPhotonsCheckbox=\u05D4\u05E6\u05D2 \u05D0\u05EA \u05DB\u05DC \u05D4\u05E4\u05D5\u05D8\u05D5\u05E0\u05D9\u05DD
 greenhouse.name=\u05D0\u05E4\u05E7\u05D8 \u05D4\u05D7\u05DE\u05DE\u05D4
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 GlassPaneControlPanel.GlassPaneLabel=\u05DE\u05E1\u05E4\u05E8 \u05DC\u05D5\u05D7\u05D5\u05EA \u05D6\u05DB\u05D5\u05DB\u05D9\u05EA
 ModuleTitle.GreenHouseModule=\u05D0\u05E4\u05E7\u05D8 \u05D4\u05D7\u05DE\u05DE\u05D4
 GreenhouseLegend.SunlightPhotonLabel=\u05E4\u05D5\u05D8\u05D5\u05DF \u05D0\u05D5\u05E8 \u05D4\u05E9\u05DE\u05E9
