--- a/trunk/simulations-java/simulations/hydrogen-atom/data/hydrogen-atom/localization/hydrogen-atom-strings_iw.properties
+++ b/trunk/simulations-java/simulations/hydrogen-atom/data/hydrogen-atom/localization/hydrogen-atom-strings_iw.properties
@@ -1,5 +1,5 @@
-#hydrogen-atom-strings_iw.properties created Thu Jul 08 22:47:24 IDT 2010 using: hydrogen-atom 1.09.00 (38004), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Thu Jul 08 22:47:24 IDT 2010
+#hydrogen-atom-strings_iw.properties created Mon Oct 17 14:51:05 MDT 2011 using: hydrogen-atom 1.11.00 (54048), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 14:51:05 MDT 2011
 label.clockSpeed.fast=\u05DE\u05D4\u05E8
 label.lightControls=\u05D1\u05E7\u05E8\u05EA \u05D0\u05D5\u05E8
 label.bohr=\u05D1\u05D5\u05D4\u05E8
@@ -16,6 +16,7 @@ label.photonsEmitted=\u05E1\u05E4\u05E7\u05D8\u05E8\u05D5\u05DE\u05D8\u05E8\: \u
 label.classical=...\u05E7\u05DC\u05D0\u05E1\u05D9
 label.transitionMarks=\u05D4\u05E8\u05D0\u05D4 \u05D0\u05D5\u05E8\u05DB\u05D9 \u05D2\u05DC \u05E9\u05DC \u05D4\u05D1\u05DC\u05D9\u05E2\u05D4
 button.plumPudding=\u05E2\u05D5\u05D2\u05EA \u05D4\u05E6\u05D9\u05DE\u05D5\u05E7\u05D9\u05DD
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 button.spectrometer.stop=\u05E2\u05E6\u05D5\u05E8
 menu.deBroglieView=\u05EA\u05E6\u05D5\u05D2\u05EA \u05D3\u05D4-\u05D1\u05E8\u05D5\u05DC\u05D9
 menu.deBroglieView.brightness=\u05EA\u05E6\u05D5\u05D2\u05EA \u05D1\u05D4\u05D9\u05E8\u05D5\u05EA
@@ -45,8 +46,8 @@ label.uvPhoton=\u05E4\u05D5\u05D8\u05D5\u05DF \u05D0\u05D5\u05DC\u05D8\u05E8\u05
 HAModule.title=\u05DE\u05D5\u05D3\u05DC\u05D9\u05DD \u05E9\u05DC \u05D0\u05D8\u05D5\u05DD \u05D4\u05DE\u05D9\u05DE\u05DF
 label.notToScale=* \u05D4\u05E6\u05D9\u05D5\u05E8\u05D9\u05DD \u05D0\u05D9\u05E0\u05DD \u05D1\u05E7\u05E0\u05D4 \u05DE\u05D9\u05D3\u05D4
 title.energyDiagram=\u05D0\u05E0\u05E8\u05D2\u05D9\u05EA \u05D0\u05DC\u05E7\u05D8\u05E8\u05D5\u05DF
-button.monochromatic=\u05DE\u05D5\u05E0\u05D5\u05DB\u05E8\u05D5\u05DE\u05D8\u05D9
 label.neutron=\u05E0\u05D5\u05D9\u05D8\u05E8\u05D5\u05DF
+button.monochromatic=\u05DE\u05D5\u05E0\u05D5\u05DB\u05E8\u05D5\u05DE\u05D8\u05D9
 label.irPhoton=\u05E4\u05D5\u05D8\u05D5\u05DF \u05D0\u05D9\u05E0\u05E4\u05E8\u05D0 \u05D0\u05D3\u05D5\u05DD
 label.experiment=\u05E0\u05D9\u05E1\u05D5\u05D9
 button.spectrometer.reset=\u05D0\u05EA\u05D7\u05DC
