--- a/trunk/simulations-java/simulations/ideal-gas/data/ideal-gas/localization/ideal-gas-strings_iw.properties
+++ b/trunk/simulations-java/simulations/ideal-gas/data/ideal-gas/localization/ideal-gas-strings_iw.properties
@@ -1,5 +1,5 @@
-#ideal-gas-strings_iw.properties created Thu Jul 08 21:51:54 IDT 2010 using: ideal-gas 3.12.00 (38433), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Thu Jul 08 21:51:54 IDT 2010
+#ideal-gas-strings_iw.properties created Mon Oct 17 15:08:17 MDT 2011 using: ideal-gas 3.14.00 (51133), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 15:08:17 MDT 2011
 Common.None=\u05DC\u05DC\u05D0
 HeliumBalloonControlPanel.controlsTitle=\u05D4\u05DC\u05D9\u05D5\u05DF \u05D1\u05D1\u05DC\u05D5\u05DF
 balloons-and-buoyancy.name=\u05D1\u05DC\u05D5\u05E0\u05D9\u05DD \u05D5\u05E6\u05D9\u05E4\u05D4
@@ -55,6 +55,7 @@ stopwatch.stop=\u05E2\u05E6\u05D5\u05E8
 Common.Pressure=\u05DC\u05D7\u05E5
 stopwatch.start=\u05D4\u05EA\u05D7\u05DC
 IdealGasControlPanel.Constant_Parameter=\u05E4\u05E8\u05DE\u05D8\u05E8 \u05E7\u05D1\u05D5\u05E2
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 IdealGasControlPanel.Measurement_Tools=<html><center>\u05DB\u05DC\u05D9<br>\u05DE\u05D3\u05D9\u05D3\u05D4</center></html>
 Common.Light_Species=\u05D7\u05DC\u05E7\u05D9\u05E7\u05D9\u05DD \u05E7\u05DC\u05D9\u05DD
 GasSpeciesMonitorPanel.Title=\u05DE\u05D0\u05E4\u05D9\u05D9\u05E0\u05D9 \u05D4\u05D2\u05D6
