--- a/simulations-java/simulations/neuron/data/neuron/localization/neuron-strings_iw.properties
+++ b/simulations-java/simulations/neuron/data/neuron/localization/neuron-strings_iw.properties
@@ -1,5 +1,5 @@
-#neuron-strings_iw.properties created Sun Aug 29 22:15:25 IDT 2010 using: neuron 1.00.00 (44987), translation-utility 2.09.00 (44031) Sep 14, 2010
-#Sun Aug 29 22:15:25 IDT 2010
+#neuron-strings_iw.properties created Mon Oct 17 14:57:15 MDT 2011 using: neuron 1.00.00 (44987), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 14:57:15 MDT 2011
 StimulateButton.caption=<html><center>\u05D4\u05E4\u05E2\u05DC<br>\u05EA\u05D0 \u05E2\u05E6\u05D1</center></html>
 ShowCharges=\u05D4\u05E6\u05D2 \u05DE\u05D8\u05E2\u05E0\u05D9\u05DD
 Legend.potassiumGatedChannel=\u05EA\u05E2\u05DC\u05D4 \u05EA\u05DC\u05D5\u05D9\u05EA \u05D0\u05E9\u05DC\u05D2\u05DF
@@ -16,6 +16,7 @@ ShowAllIons=\u05D4\u05E6\u05D2 \u05D0\u05EA \u05DB\u05DC \u05D4\u05D9\u05D5\u05E
 ShowPotentialChart=\u05D8\u05D1\u05DC\u05EA \u05DE\u05EA\u05D7\u05D9\u05DD
 Control.title=\u05E9\u05DC\u05D9\u05D8\u05D4
 Chart.yAxisLabel=\u05E4\u05D5\u05D8\u05E0\u05E6\u05D9\u05D0\u05DC \u05DE\u05DE\u05D1\u05E8\u05E0\u05D4 (\u05DE\u05D9\u05DC\u05D9\u05D5\u05D5\u05DC\u05D8/(
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 Chart.clear=\u05E0\u05E7\u05D4 \u05D8\u05D1\u05DC\u05D4
 Legend.potassiumLeakChannel=\u05EA\u05E2\u05DC\u05EA \u05D3\u05DC\u05D9\u05E4\u05D4 \u05DC\u05D0\u05E9\u05DC\u05D2\u05DF 
 Legend.sodiumLeakChannel=\u05EA\u05E2\u05DC\u05EA \u05D3\u05DC\u05D9\u05E4\u05D4 \u05DC\u05E0\u05EA\u05E8\u05DF
