--- a/simulations-java/simulations/photoelectric/data/photoelectric/localization/photoelectric-strings_iw.properties
+++ b/simulations-java/simulations/photoelectric/data/photoelectric/localization/photoelectric-strings_iw.properties
@@ -1,5 +1,5 @@
-#photoelectric-strings_iw.properties created Sun Apr 11 23:43:00 IDT 2010 using: photoelectric 1.08.00 (38021), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Sun Apr 11 23:43:00 IDT 2010
+#photoelectric-strings_iw.properties created Mon Oct 17 14:58:56 MDT 2011 using: photoelectric 1.09.00 (51140), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 14:58:56 MDT 2011
 Element.Magnesium=?????
 Menu.PhotonView=\u05D4\u05E6\u05D2 \u05E4\u05D5\u05D8\u05D5\u05E0\u05D9\u05DD
 Element.Calcium=\u05E1\u05D9\u05D3\u05DF
@@ -20,6 +20,7 @@ Graphs=\u05D2\u05E8\u05E4\u05D9\u05DD
 GraphTitle.CurrentVsIntensity=<html>\u05D6\u05E8\u05DD \u05DE\u05D5\u05DC \u05E2\u05D5\u05E6\u05DE\u05EA \u05D0\u05D5\u05E8</html>
 Menu.Options=\u05D0\u05E4\u05E9\u05E8\u05D5\u05D9\u05D5\u05EA
 Element.Sodium=\u05E0\u05EA\u05E8\u05DF
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 Element.Zinc=\u05D0\u05D1\u05E5
 Element.Copper=\u05E0\u05D7\u05D5\u05E9\u05EA
 Target=\u05DE\u05D8\u05E8\u05D4
