--- a/trunk/simulations-java/simulations/quantum-wave-interference/data/quantum-wave-interference/localization/quantum-wave-interference-strings_iw.properties
+++ b/trunk/simulations-java/simulations/quantum-wave-interference/data/quantum-wave-interference/localization/quantum-wave-interference-strings_iw.properties
@@ -1,5 +1,5 @@
-#quantum-wave-interference-strings_iw.properties created Sat Jun 19 23:20:52 IDT 2010 using: quantum-wave-interference 1.10.00 (38023), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Sat Jun 19 23:20:52 IDT 2010
+#quantum-wave-interference-strings_iw.properties created Mon Oct 17 15:01:08 MDT 2011 using: quantum-wave-interference 1.11.00 (51736), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 15:01:08 MDT 2011
 depth=\u05E2\u05D5\u05DE\u05E7
 particles.electrons=\u05D0\u05DC\u05E7\u05D8\u05E8\u05D5\u05E0\u05D9\u05DD
 value=\u05E2\u05E8\u05DA\=???
@@ -15,6 +15,7 @@ y0=Y0
 double.slit=\u05D7\u05E8\u05D9\u05E5 \u05DB\u05E4\u05D5\u05DC
 x.axis=x-\u05E6\u05D9\u05E8
 controls.barriers.title=\u05E4\u05D5\u05D8\u05E0\u05E6\u05D9\u05D0\u05DC
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 radial=\u05DE\u05E2\u05D2\u05DC\u05D9
 probability.inflation=\u05D4\u05E1\u05EA\u05D1\u05E8\u05D5\u05EA \u05D4\u05EA\u05E0\u05E4\u05D7\u05D5\u05EA
 menus.time-step=\u05E7\u05E4\u05D9\u05E6\u05EA \u05D6\u05DE\u05DF
