--- a/simulations-java/simulations/reactants-products-and-leftovers/data/reactants-products-and-leftovers/localization/reactants-products-and-leftovers-strings_iw.properties
+++ b/simulations-java/simulations/reactants-products-and-leftovers/data/reactants-products-and-leftovers/localization/reactants-products-and-leftovers-strings_iw.properties
@@ -1,33 +1,33 @@
-#reactants-products-and-leftovers-strings_iw.properties created Sun Jun 13 01:45:11 IDT 2010 using: reactants-products-and-leftovers 1.00.00 (39390), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Sun Jun 13 01:45:11 IDT 2010
-message.moleculesHidden=<html>\u05D4\u05DE\u05D5\u05DC\u05E7\u05D5\u05DC\u05D5\u05EA \u05DE\u05D5\u05E1\u05EA\u05E8\u05D5\u05EA</html>
-radioButton.nothing=\u05E9\u05D5\u05DD \u05D3\u05D1\u05E8
-label.reactionNumber=\u05EA\u05D2\u05D5\u05D1\u05D4 {0} \u05DE\u05EA\u05D5\u05DA {1}\:
-title.game=\u05DE\u05E9\u05D7\u05E7\!
-button.next=\u05D4\u05D1\u05D0
-radioButton.water=\u05D9\u05E6\u05D9\u05E8\u05EA \u05DE\u05D9\u05DD
-label.products=\u05EA\u05D5\u05E6\u05E8\u05D9\u05DD
-radioButton.cheeseSandwich=\u05DB\u05E8\u05D9\u05DA \u05D2\u05D1\u05D9\u05E0\u05D4
-question.howManyReactants=<html><center>\u05DB\u05DE\u05D4<br>\u05DE\u05D2\u05D9\u05D1\u05D9\u05DD?</center></html>
-radioButton.molecules=\u05DE\u05D5\u05DC\u05E7\u05D5\u05DC\u05D5\u05EA
-label.beforeSandwich=\u05DC\u05E4\u05E0\u05D9 "\u05EA\u05D2\u05D5\u05D1\u05D4"
-label.noSandwich=\u05D0\u05D9\u05DF "\u05EA\u05D2\u05D5\u05D1\u05D4"
-question.howManyProductsAndLeftovers=<html><center>\u05DB\u05DE\u05D4<br>\u05EA\u05D5\u05E6\u05E8\u05D9\u05DD \u05D5\u05E9\u05D0\u05E8\u05D9\u05D5\u05EA?</center></html>
+#reactants-products-and-leftovers-strings_iw.properties created Mon Oct 17 15:01:57 MDT 2011 using: reactants-products-and-leftovers 1.03.00 (52708), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 15:01:57 MDT 2011
 button.showAnswer=\u05D4\u05E8\u05D0\u05D4 \u05EA\u05E9\u05D5\u05D1\u05D4
-label.afterSwndwich=\u05D0\u05D7\u05E8\u05D9 "\u05EA\u05D2\u05D5\u05D1\u05D4"
-message.numbersHidden=<html>\u05D4\u05DE\u05E1\u05E4\u05E8\u05D9\u05DD \u05DE\u05D5\u05E1\u05EA\u05E8\u05D9\u05DD</html>
-title.realReaction=\u05EA\u05D2\u05D5\u05D1\u05D4 \u05D0\u05DE\u05D9\u05EA\u05D9\u05EA
-radioButton.meatCheeseSandwich=\u05DB\u05E8\u05D9\u05DA \u05D2\u05D1\u05D9\u05E0\u05D4 \u05D5\u05D1\u05E9\u05E8
-label.beforeReaction=\u05DC\u05E4\u05E0\u05D9 \u05EA\u05D2\u05D5\u05D1\u05D4
-button.check=\u05D1\u05D3\u05D5\u05E7
-label.afterReaction=\u05D0\u05D7\u05E8\u05D9 \u05EA\u05D2\u05D5\u05D1\u05D4
-title.sandwichShop=\u05D7\u05E0\u05D5\u05EA \u05DB\u05E8\u05D9\u05DB\u05D9\u05DD
-label.leftovers=\u05E9\u05D0\u05E8\u05D9\u05D5\u05EA
-button.tryAgain=\u05E0\u05E1\u05D4 \u05E9\u05D5\u05D1
+radioButton.water=\u05D9\u05E6\u05D9\u05E8\u05EA \u05DE\u05D9\u05DD
 radioButton.numbers=\u05DE\u05E1\u05E4\u05E8\u05D9\u05DD
-label.hide=\u05D4\u05E1\u05EA\u05E8\:
-message.valueOutOfRange=\u05D4\u05E2\u05E8\u05DB\u05D9\u05DD \u05D7\u05D9\u05D9\u05D1\u05D9\u05DD \u05DC\u05D4\u05D9\u05D5\u05EA \u05D1\u05D9\u05DF {0} \u05DC {1}.
-label.reactants=\u05DE\u05D2\u05D9\u05D1\u05D9\u05DD
-radioButton.methane=\u05D1\u05E2\u05D9\u05E8\u05EA \u05DE\u05EA\u05D0\u05DF
+title.game=\u05DE\u05E9\u05D7\u05E7\!
+radioButton.molecules=\u05DE\u05D5\u05DC\u05E7\u05D5\u05DC\u05D5\u05EA
+message.numbersHidden=<html>\u05D4\u05DE\u05E1\u05E4\u05E8\u05D9\u05DD \u05DE\u05D5\u05E1\u05EA\u05E8\u05D9\u05DD</html>
+question.howManyReactants=<html><center>\u05DB\u05DE\u05D4<br>\u05DE\u05D2\u05D9\u05D1\u05D9\u05DD?</center></html>
 radioButton.ammonia=\u05D4\u05DB\u05E0\u05EA \u05D0\u05DE\u05D5\u05E0\u05D9\u05D4
+label.products=\u05EA\u05D5\u05E6\u05E8\u05D9\u05DD
+label.noSandwich=\u05D0\u05D9\u05DF "\u05EA\u05D2\u05D5\u05D1\u05D4"
+button.tryAgain=\u05E0\u05E1\u05D4 \u05E9\u05D5\u05D1
+label.afterReaction=\u05D0\u05D7\u05E8\u05D9 \u05EA\u05D2\u05D5\u05D1\u05D4
+radioButton.cheeseSandwich=\u05DB\u05E8\u05D9\u05DA \u05D2\u05D1\u05D9\u05E0\u05D4
+label.beforeReaction=\u05DC\u05E4\u05E0\u05D9 \u05EA\u05D2\u05D5\u05D1\u05D4
+title.sandwichShop=\u05D7\u05E0\u05D5\u05EA \u05DB\u05E8\u05D9\u05DB\u05D9\u05DD
+title.realReaction=\u05EA\u05D2\u05D5\u05D1\u05D4 \u05D0\u05DE\u05D9\u05EA\u05D9\u05EA
+radioButton.methane=\u05D1\u05E2\u05D9\u05E8\u05EA \u05DE\u05EA\u05D0\u05DF
+button.check=\u05D1\u05D3\u05D5\u05E7
+radioButton.nothing=\u05E9\u05D5\u05DD \u05D3\u05D1\u05E8
 reactants-products-and-leftovers.name=\u05DE\u05D2\u05D9\u05D1\u05D9\u05DD, \u05EA\u05D5\u05E6\u05E8\u05D9\u05DD \u05D5\u05E9\u05D0\u05E8\u05D9\u05D5\u05EA
+radioButton.meatCheeseSandwich=\u05DB\u05E8\u05D9\u05DA \u05D2\u05D1\u05D9\u05E0\u05D4 \u05D5\u05D1\u05E9\u05E8
+question.howManyProductsAndLeftovers=<html><center>\u05DB\u05DE\u05D4<br>\u05EA\u05D5\u05E6\u05E8\u05D9\u05DD \u05D5\u05E9\u05D0\u05E8\u05D9\u05D5\u05EA?</center></html>
+label.leftovers=\u05E9\u05D0\u05E8\u05D9\u05D5\u05EA
+message.moleculesHidden=<html>\u05D4\u05DE\u05D5\u05DC\u05E7\u05D5\u05DC\u05D5\u05EA \u05DE\u05D5\u05E1\u05EA\u05E8\u05D5\u05EA</html>
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
+label.reactionNumber=\u05EA\u05D2\u05D5\u05D1\u05D4 {0} \u05DE\u05EA\u05D5\u05DA {1}\:
+button.next=\u05D4\u05D1\u05D0
+label.hide=\u05D4\u05E1\u05EA\u05E8\:
+label.reactants=\u05DE\u05D2\u05D9\u05D1\u05D9\u05DD
+label.afterSwndwich=\u05D0\u05D7\u05E8\u05D9 "\u05EA\u05D2\u05D5\u05D1\u05D4"
+label.beforeSandwich=\u05DC\u05E4\u05E0\u05D9 "\u05EA\u05D2\u05D5\u05D1\u05D4"
