--- a/simulations-java/simulations/reactions-and-rates/data/reactions-and-rates/localization/reactions-and-rates-strings_iw.properties
+++ b/simulations-java/simulations/reactions-and-rates/data/reactions-and-rates/localization/reactions-and-rates-strings_iw.properties
@@ -1,5 +1,5 @@
-#reactions-and-rates-strings_iw.properties created Fri Jul 09 23:59:23 IDT 2010 using: reactions-and-rates 1.05.00 (38025), translation-utility 2.08.00 (39581) Apr 2, 2010
-#Fri Jul 09 23:59:23 IDT 2010
+#reactions-and-rates-strings_iw.properties created Mon Oct 17 15:02:43 MDT 2011 using: reactions-and-rates 1.06.00 (52280), translation-utility 2.12.00 (57171) Oct 3, 2011
+#Mon Oct 17 15:02:43 MDT 2011
 Control.reload=\u05D8\u05E2\u05DF \u05DE\u05D6\u05E0\u05E7
 EnergyView.Legend.totalEnergy=\u05E1\u05DA \u05D0\u05E0\u05E8\u05D2\u05D9\u05D4
 tempurature.cold=\u05E7\u05E8
@@ -10,6 +10,7 @@ messages.invitation=\u05DE\u05E9\u05D5\u05DA \u05D1\u05D9\u05D3\u05D9\u05EA \u05
 Control.showPieChart=\u05E2\u05D5\u05D2\u05D4
 StripChart.num=(\u05DB\u05DE\u05D5\u05EA (\u05DE\u05D5\u05DC\u05E7\u05D5\u05DC\u05D5\u05EA
 ExperimentSetup.topLine=...\u05D4\u05EA\u05D7\u05DC \u05E2\u05DD \u05DB\u05DE\u05D4
+translation.credits=<html><center>\u05D3\u05D5\u05D9\u05D3\u05E1\u05D5\u05DF \u05D0\u05D5\u05E0\u05DC\u05D9\u05D9\u05DF - \u05DC\u05DE\u05D9\u05D3\u05D4 \u05DE\u05EA\u05D5\u05E7\u05E9\u05D1\u05EA <Br>http\://davidson.weizmann.ac.il/online/tikshuv </center></html>
 Control.moleculeType=\u05E1\u05D5\u05D2 \u05DE\u05D5\u05DC\u05E7\u05D5\u05DC\u05D4
 Control.launcherOptions=\u05D0\u05E4\u05E9\u05E8\u05D5\u05D9\u05D5\u05EA \u05DE\u05D6\u05E0\u05E7
 module.rate-experiments=\u05E0\u05D9\u05E1\u05D5\u05D9\u05D9 \u05E7\u05E6\u05D1
